--- a/stnepal/templates/stnepal/home.html
+++ b/stnepal/templates/stnepal/home.html
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-md-3">
             <div class="from-group">
-                <label for="name">Username:</label><br>
+                <label for="name">Username: eeeeeeeeeeeeeeee</label><br>
                 <input type="text" id = "name" class="form-control" required>
             </div>
         </div>
